--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "tarkov-image-processor",
   "version": "1.0.0",
   "description": "Uses template matching to parse information related to Escape From Tarkov",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint . --ext .ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.6.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "opencv-ts": "^1.3.6"
+    "opencv-ts": "^1.3.6",
+    "screenshot-desktop": "^1.12.7"
   }
 }
