--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "tsc && node dist/app.js",
+    "scraper": "tsc && node dist/scraper.js",
     "test": "jest",
     "lint": "npx eslint . --ext .ts"
   },
-  "author": "",
+  "author": "Luke Dowell",
   "license": "ISC",
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
+    "@types/crawler": "^1.2.2",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.6.2",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
@@ -21,6 +24,8 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "cheerio": "^0.22.0",
+    "crawler": "^1.3.0",
     "jimp": "^0.16.1",
     "opencv-ts": "^1.3.6",
     "screenshot-desktop": "^1.12.7"
