--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
         "cheerio": "^0.22.0",
         "crawler": "^1.3.0",
         "jimp": "^0.16.1",
-        "nw": "^0.66.1",
         "opencv-ts": "^1.3.6",
-        "screenshot-desktop": "^1.12.7"
+        "windows-ss": "*",
+        "workerpool": "^6.2.1"
     },
     "description": "Uses template matching to parse information related to Escape From Tarkov",
     "devDependencies": {
@@ -19,15 +19,17 @@
         "@typescript-eslint/parser": "^5.31.0",
         "eslint": "^8.20.0",
         "jest": "^28.1.3",
+        "nw": "^0.66.1",
         "ts-jest": "^28.0.7",
         "typescript": "^4.7.4"
     },
     "license": "ISC",
     "main": "./index.html",
     "name": "tarkov-inventory-tracker",
-    "nodejs": true,
+    "nodejs": false,
     "scripts": {
         "lint": "npx eslint . --ext .ts",
+        "publish": "rm -rf ./node_modules && npm i --production && node-prune",
         "scraper": "tsc && node dist/scraper/scraper.js",
         "start": "tsc && node dist/app.js",
         "start-nw": "tsc && ../sdk/nwjs/nw.exe --disable-gpu-compositing --force-cpu-draw .",
@@ -35,17 +37,29 @@
         "test": "jest"
     },
     "version": "1.0.0",
+    "webexe_settings": {
+        "download_dir": "",
+        "force_download": false,
+        "nw_compression_level": 0,
+        "nw_version": "0.66.1",
+        "sdk_build": false,
+        "uncompressed_folder": false,
+        "windows-x32": true,
+        "windows-x64": true
+    },
     "webkit": {},
     "window": {
+        "always_on_top": true,
+        "exe_icon": "avatar.jpg",
         "frame": false,
-        "id": "tarkov-image-processor",
         "fullscreen": true,
+        "icon": "avatar.jpg",
+        "id": "tarkov-image-processor",
         "resizable": true,
         "show": true,
         "show_in_taskbar": true,
         "title": "Tarkov Inventory Tracker",
-        "visible": true,
         "transparent": true,
-        "always_on_top": true
+        "visible": true
     }
 }
