--- a/package.json
+++ b/package.json
@@ -11,17 +11,26 @@
     },
     "description": "Uses template matching to parse information related to Escape From Tarkov",
     "devDependencies": {
+        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-typescript": "^7.18.6",
         "@types/cheerio": "^0.22.31",
         "@types/crawler": "^1.2.2",
         "@types/jest": "^28.1.6",
         "@types/node": "^18.6.2",
+        "@types/webpack-dev-server": "^4.7.2",
+        "@types/workerpool": "^6.1.0",
         "@typescript-eslint/eslint-plugin": "^5.31.0",
         "@typescript-eslint/parser": "^5.31.0",
+        "babel-loader": "^8.2.5",
         "eslint": "^8.20.0",
         "jest": "^28.1.3",
         "nw": "^0.66.1",
         "ts-jest": "^28.0.7",
-        "typescript": "^4.7.4"
+        "ts-loader": "^9.3.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.7.4",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0"
     },
     "license": "ISC",
     "main": "./index.html",
@@ -31,8 +40,8 @@
         "lint": "npx eslint . --ext .ts",
         "publish": "rm -rf ./node_modules && npm i --production && node-prune",
         "scraper": "tsc && node dist/scraper/scraper.js",
-        "start": "tsc && node dist/app.js",
-        "start-nw": "tsc && ../sdk/nwjs/nw.exe --disable-gpu-compositing --force-cpu-draw .",
+        "start": "node dist/app.js",
+        "start-nw": "../sdk/nwjs/nw.exe --disable-gpu-compositing --force-cpu-draw .",
         "start-nw-powershell": "tsc && \"..\\sdk\\nwjs\\nw.exe\" --disable-gpu-compositing --force-cpu-draw .",
         "test": "jest"
     },
