--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,9 @@ authors = ["Luke Dowell <luke@dowell.dev>"]
 python = "^3.8"
 mss = "^6.1.0"
 numpy = "^1.23.1"
-opencv-python = "^4.6.0"
 matplotlib = "^3.5.2"
+PyQt5 = "^5.15.7"
+opencv-contrib-python = "^4.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
